--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Fernando Tosta",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "faker": "^5.1.0",
     "g": "^2.0.1",
     "got": "^11.6.0",
