--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "json-server": "^0.16.1"
   },
   "devDependencies": {
-    "jest": "^26.4.2"
+    "jest": "^26.4.2",
+    "supertest": "^4.0.2"
   }
 }
